# douyin-automation-toolkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
prompts/: 抖音内容发布和素材管理.md
scripts/: account_manager.py  chrome_launcher.py  cli.py  diagnose_upload.py
scripts/douyin/: __init__.py  bcut_asr.py  browser.py  cdp.py  collection.py  comment.py  config.py  cookies.py  errors.py  feed_detail.py  feeds.py  hot_db.py  hot_list.py  human.py  interact.py  like_favorite.py  login.py  publish.py  publish_article.py  publish_image.py  publish_video.py  publish_vr.py  search.py  selectors.py  stealth.py  storage.py  subtitle_extractor.py  transcriber.py  types.py  urls.py  user_profile.py  video_detail.py
scripts/material/: __init__.py  config.py  search.py  sync.py  vector.py
skills/douyin-auth/: SKILL.md
skills/douyin-content-rules/: SKILL.md
skills/douyin-explore/: SKILL.md
skills/douyin-hot-list/: SKILL.md
skills/douyin-interact/: SKILL.md
skills/douyin-material/: SKILL.md
skills/douyin-publish/: SKILL.md
skills/douyin-query/: SKILL.md
